<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image2"
        android:scaleType="centerCrop"
        />
<TextView
    android:text="@string/nano"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="26dp"
    android:textSize="30sp"
    android:id="@+id/nano"
    android:textColor="#FFEA00"
    android:fontFamily="sans-serif-light"
    />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="100dp"
    android:text="@string/spotify"
    android:textSize="16sp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_marginBottom="10dp"
    android:background="#B2EBF2"
    android:id="@+id/spotify"
    android:onClick="spotifystreamer"
    android:fontFamily="sans-serif-light"
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spotify"
        android:text="@string/scores"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:background="#80DEEA"
        android:layout_marginBottom="10dp"
        android:layout_alignLeft="@+id/spotify"
        android:layout_alignStart="@+id/spotify"
        android:layout_alignRight="@+id/spotify"
        android:layout_alignEnd="@+id/spotify"
        android:id="@+id/score"
        android:onClick="scoresapp"
        android:fontFamily="sans-serif-light"
        />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/spotify"
    android:layout_alignStart="@+id/spotify"
    android:layout_alignRight="@+id/spotify"
    android:layout_alignEnd="@+id/spotify"
    android:layout_below="@+id/score"
    android:text="@string/library"
    android:textSize="16sp"
    android:background="#4DD0E1"
    android:layout_marginBottom="10dp"
    android:padding="16dp"
    android:id="@+id/library"
    android:fontFamily="sans-serif-light"
    android:onClick="libraryapp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/build"
        android:text="@string/buildit"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_alignLeft="@+id/spotify"
        android:layout_alignRight="@+id/spotify"
        android:layout_alignStart="@+id/spotify"
        android:layout_alignEnd="@+id/spotify"
        android:layout_below="@+id/library"
        android:background="#26C6DA"
        android:layout_marginBottom="10dp"
        android:onClick="builditbigger"
        android:fontFamily="sans-serif-light"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_alignLeft="@+id/spotify"
        android:layout_alignRight="@+id/spotify"
        android:layout_alignEnd="@+id/spotify"
        android:layout_alignStart="@+id/spotify"
        android:layout_below="@+id/build"
        android:id="@+id/xyz"
        android:background="#00BCD4"
        android:layout_marginBottom="10dp"
        android:onClick="xyzreader"
        android:fontFamily="sans-serif-light"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:textSize="16sp"
        android:textColor="#76FF03"
        android:layout_alignRight="@+id/spotify"
        android:layout_alignEnd="@+id/spotify"
        android:layout_below="@+id/xyz"
        android:layout_alignLeft="@+id/spotify"
        android:layout_alignStart="@+id/spotify"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="10dp"
        android:background="#00796B"
        android:fontFamily="sans-serif-light"
        android:onClick="capstone"/>
</RelativeLayout>
